--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -133,34 +133,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### metalearing with Hamiltonian Neural Networks"
+    "#### metalearning with Hamiltonian Neural Networks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45b8845d2d054854b94f3e56e6640b30",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "inner_config = InnerConfig(test_train_split=0.8,\n",
     "                            input_dim=2,\n",
