nbdev showdows namespace added

--- a/nbs/03_MLP.ipynb
+++ b/nbs/03_MLP.ipynb
@@ -43,7 +43,8 @@
    "source": [
     "#| hide\n",
     "import nbdev\n",
-    "from fastcore.test import test_eq"
+    "from fastcore.test import test_eq\n",
+    "from nbdev.showdoc import *"
    ]
   },
   {
