--- a/nbs/06_Loops.ipynb
+++ b/nbs/06_Loops.ipynb
@@ -44,7 +44,8 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "import nbdev"
+    "import nbdev\n",
+    "from nbdev.showdoc import *"
    ]
   },
   {
