--- a/nbs/02_UtilClasses.ipynb
+++ b/nbs/02_UtilClasses.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp utilclasses"
+    "# | default_exp utilclasses"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "from dataclasses import dataclass"
    ]
   },
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "@dataclass\n",
     "class InnerConfig:\n",
     "    test_train_split: float\n",
@@ -58,7 +58,7 @@
     "    n_fns: int\n",
     "    l2_reg: float\n",
     "    seed: int\n",
-    "    base_act: str = 'sin'\n"
+    "    base_act: str = \"sin\""
    ]
   },
   {
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "@dataclass\n",
     "class OuterConfig:\n",
     "    input_dim: int\n",
@@ -87,15 +87,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "@dataclass\n",
     "class InnerResults:\n",
     "    \"\"\"\n",
     "    dataclass to store inner loop results\n",
     "    \"\"\"\n",
+    "\n",
     "    train_loss: list\n",
     "    test_loss: list\n",
-    "    grad_norm: list\n"
+    "    grad_norm: list"
    ]
   },
   {
@@ -104,16 +105,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "@dataclass\n",
     "class OuterResults:\n",
     "    \"\"\"\n",
     "    dataclass to store outer loop results\n",
     "    \"\"\"\n",
+    "\n",
     "    inner_test_loss: list\n",
     "    train_loss: list\n",
     "    inner_afuncs: list\n",
-    "    grad_norm: list\n"
+    "    grad_norm: list"
    ]
   },
   {
@@ -122,8 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "import nbdev; nbdev.nbdev_export()"
+    "# | hide\n",
+    "import nbdev\n",
+    "\n",
+    "nbdev.nbdev_export()"
    ]
   }
  ],
