--- a/nbs/04_Baseline.ipynb
+++ b/nbs/04_Baseline.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%reload_ext autoreload\n",
-    "%env XLA_PYTHON_CLIENT_ALLOCATOR=platform\n"
+    "%env XLA_PYTHON_CLIENT_ALLOCATOR=platform"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp baseline"
+    "# | default_exp baseline"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "import nbdev\n",
     "from fastcore.test import test_eq\n",
     "from nbdev.showdoc import *"
@@ -56,10 +56,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "import equinox as eqx\n"
+    "import equinox as eqx"
    ]
   },
   {
@@ -68,7 +68,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from jaxDiversity.mlp import MultiActMLP, deterministic_init, init_linear_weight"
    ]
   },
@@ -78,12 +77,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "@eqx.filter_value_and_grad()\n",
     "def compute_loss(model, x, y, afuncs):\n",
     "    \"\"\"Compute the l2 loss of the model on the given data.\"\"\"\n",
-    "    pred_y, _ = jax.vmap(model, in_axes=(0, None))(x, afuncs) # batched predictions\n",
-    "    loss = jnp.mean((pred_y - y)**2)\n",
+    "    pred_y, _ = jax.vmap(model, in_axes=(0, None))(x, afuncs)  # batched predictions\n",
+    "    loss = jnp.mean((pred_y - y) ** 2)\n",
     "    return loss"
    ]
   },
@@ -93,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| test\n",
+    "# | test\n",
     "# test compute_loss\n",
     "key = jax.random.PRNGKey(0)\n",
     "model_key, init_key = jax.random.split(key)\n",
@@ -106,7 +105,7 @@
     "afuncs = [lambda x: 0, lambda x: 0]\n",
     "\n",
     "loss, grad = compute_loss(model, x, y, afuncs)\n",
-    "test_eq(loss, 1)\n"
+    "test_eq(loss, 1)"
    ]
   },
   {
@@ -115,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "nbdev.nbdev_export()"
    ]
   }
