--- a/nbs/05_HNN.ipynb
+++ b/nbs/05_HNN.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%reload_ext autoreload\n",
-    "%env XLA_PYTHON_CLIENT_ALLOCATOR=platform\n"
+    "%env XLA_PYTHON_CLIENT_ALLOCATOR=platform"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp hnn"
+    "# | default_exp hnn"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "import nbdev\n",
     "from fastcore.test import test_eq\n",
     "from nbdev.showdoc import *"
@@ -55,10 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "import equinox as eqx\n"
+    "import equinox as eqx"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "from jaxDiversity.mlp import MultiActMLP, deterministic_init, init_linear_weight"
    ]
   },
@@ -77,15 +77,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def hamiltonian_factory(model, afuncs):\n",
     "    \"\"\"Returns a function that computes the Hamiltonian of a given model.\"\"\"\n",
-    "    def hamiltonian(q,p):\n",
+    "\n",
+    "    def hamiltonian(q, p):\n",
     "        \"\"\"Hamiltonian taking in q and p as 1D arrays.\"\"\"\n",
     "        q = q.reshape((1, -1))\n",
     "        p = p.reshape((1, -1))\n",
     "        x = jnp.concatenate([q, p], axis=None)\n",
     "        return model(x, afuncs)[0].reshape(())\n",
+    "\n",
     "    return hamiltonian"
    ]
   },
@@ -95,16 +97,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "@eqx.filter_value_and_grad()\n",
     "def compute_loss(model, x, y, afuncs):\n",
     "    \"\"\"Computes hamilton's equations to get dqdp and then computes the loss\"\"\"\n",
     "    hamiltonian = hamiltonian_factory(model, afuncs)\n",
     "    q, p = jnp.split(x, 2, axis=1)\n",
-    "    dHdq= jax.vmap(jax.grad(hamiltonian, argnums=0))(q, p)\n",
+    "    dHdq = jax.vmap(jax.grad(hamiltonian, argnums=0))(q, p)\n",
     "    dHdp = jax.vmap(jax.grad(hamiltonian, argnums=1))(q, p)\n",
-    "    dqdp = jnp.concatenate([dHdp, -dHdq], axis=1) # pred_y\n",
-    "    loss = jnp.mean((dqdp - y)**2)\n",
+    "    dqdp = jnp.concatenate([dHdp, -dHdq], axis=1)  # pred_y\n",
+    "    loss = jnp.mean((dqdp - y) ** 2)\n",
     "\n",
     "    return loss"
    ]
@@ -115,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| test\n",
+    "# | test\n",
     "# test compute_loss\n",
     "key = jax.random.PRNGKey(0)\n",
     "model_key, init_key = jax.random.split(key)\n",
@@ -137,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "nbdev.nbdev_export()"
    ]
   }
