--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -81,12 +81,21 @@
     "import jax\n",
     "import optax\n",
     "\n",
-    "from jaxDiversity.utilclasses import InnerConfig, OuterConfig # simple utility classes for configuration consistency\n",
+    "from jaxDiversity.utilclasses import (\n",
+    "    InnerConfig,\n",
+    "    OuterConfig,\n",
+    ")  # simple utility classes for configuration consistency\n",
     "from jaxDiversity.dataloading import NumpyLoader, DummyDataset\n",
-    "from jaxDiversity.mlp import mlp_afunc, MultiActMLP, init_linear_weight, xavier_normal_init, save\n",
+    "from jaxDiversity.mlp import (\n",
+    "    mlp_afunc,\n",
+    "    MultiActMLP,\n",
+    "    init_linear_weight,\n",
+    "    xavier_normal_init,\n",
+    "    save,\n",
+    ")\n",
     "from jaxDiversity.baseline import compute_loss as compute_loss_baseline\n",
     "from jaxDiversity.hnn import compute_loss as compute_loss_hnn\n",
-    "from jaxDiversity.loops import inner_opt, outer_opt\n"
+    "from jaxDiversity.loops import inner_opt, outer_opt"
    ]
   },
   {
@@ -102,34 +111,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_inner_config = InnerConfig(test_train_split=0.8,\n",
-    "                            input_dim=2,\n",
-    "                            output_dim=2,\n",
-    "                            hidden_layer_sizes=[18],\n",
-    "                            batch_size=64,\n",
-    "                            epochs=2,\n",
-    "                            lr=1e-3,\n",
-    "                            mu=0.9,\n",
-    "                            n_fns=2,\n",
-    "                            l2_reg=1e-1,\n",
-    "                            seed=42)\n",
+    "dev_inner_config = InnerConfig(\n",
+    "    test_train_split=0.8,\n",
+    "    input_dim=2,\n",
+    "    output_dim=2,\n",
+    "    hidden_layer_sizes=[18],\n",
+    "    batch_size=64,\n",
+    "    epochs=2,\n",
+    "    lr=1e-3,\n",
+    "    mu=0.9,\n",
+    "    n_fns=2,\n",
+    "    l2_reg=1e-1,\n",
+    "    seed=42,\n",
+    ")\n",
     "key = jax.random.PRNGKey(dev_inner_config.seed)\n",
     "model_key, init_key = jax.random.split(key)\n",
     "afuncs = [lambda x: x**2, lambda x: x]\n",
-    "train_dataset = DummyDataset(1000, dev_inner_config.input_dim, dev_inner_config.output_dim)\n",
-    "test_dataset = DummyDataset(1000, dev_inner_config.input_dim, dev_inner_config.output_dim)\n",
-    "train_dataloader = NumpyLoader(train_dataset, batch_size=dev_inner_config.batch_size, shuffle=True)\n",
-    "test_dataloader = NumpyLoader(test_dataset, batch_size=dev_inner_config.batch_size, shuffle=True)\n",
+    "train_dataset = DummyDataset(\n",
+    "    1000, dev_inner_config.input_dim, dev_inner_config.output_dim\n",
+    ")\n",
+    "test_dataset = DummyDataset(\n",
+    "    1000, dev_inner_config.input_dim, dev_inner_config.output_dim\n",
+    ")\n",
+    "train_dataloader = NumpyLoader(\n",
+    "    train_dataset, batch_size=dev_inner_config.batch_size, shuffle=True\n",
+    ")\n",
+    "test_dataloader = NumpyLoader(\n",
+    "    test_dataset, batch_size=dev_inner_config.batch_size, shuffle=True\n",
+    ")\n",
     "\n",
-    "opt = optax.rmsprop(learning_rate=dev_inner_config.lr, momentum=dev_inner_config.mu, decay=dev_inner_config.l2_reg)\n",
-    "model = MultiActMLP(dev_inner_config.input_dim, dev_inner_config.output_dim, dev_inner_config.hidden_layer_sizes, model_key, bias=False)\n",
-    "baselineNN, opt_state ,inner_results = inner_opt(model =model, \n",
-    "                                            train_data =train_dataloader,\n",
-    "                                            test_data = test_dataloader,\n",
-    "                                            afuncs = afuncs, \n",
-    "                                            opt = opt, \n",
-    "                                            loss_fn=compute_loss_baseline,\n",
-    "                                            config = dev_inner_config, training=True, verbose=True)\n"
+    "opt = optax.rmsprop(\n",
+    "    learning_rate=dev_inner_config.lr,\n",
+    "    momentum=dev_inner_config.mu,\n",
+    "    decay=dev_inner_config.l2_reg,\n",
+    ")\n",
+    "model = MultiActMLP(\n",
+    "    dev_inner_config.input_dim,\n",
+    "    dev_inner_config.output_dim,\n",
+    "    dev_inner_config.hidden_layer_sizes,\n",
+    "    model_key,\n",
+    "    bias=False,\n",
+    ")\n",
+    "baselineNN, opt_state, inner_results = inner_opt(\n",
+    "    model=model,\n",
+    "    train_data=train_dataloader,\n",
+    "    test_data=test_dataloader,\n",
+    "    afuncs=afuncs,\n",
+    "    opt=opt,\n",
+    "    loss_fn=compute_loss_baseline,\n",
+    "    config=dev_inner_config,\n",
+    "    training=True,\n",
+    "    verbose=True,\n",
+    ")"
    ]
   },
   {
@@ -145,35 +178,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inner_config = InnerConfig(test_train_split=0.8,\n",
-    "                            input_dim=2,\n",
-    "                            output_dim=1,\n",
-    "                            hidden_layer_sizes=[32],\n",
-    "                            batch_size=64,\n",
-    "                            epochs=5,\n",
-    "                            lr=1e-3,\n",
-    "                            mu=0.9,\n",
-    "                            n_fns=2,\n",
-    "                            l2_reg=1e-1,\n",
-    "                            seed=42)\n",
-    "outer_config = OuterConfig(input_dim=1,\n",
-    "                            output_dim=1,\n",
-    "                            hidden_layer_sizes=[18],\n",
-    "                            batch_size=1,\n",
-    "                            steps=2,\n",
-    "                            print_every=1,\n",
-    "                            lr=1e-3,\n",
-    "                            mu=0.9,\n",
-    "                            seed=24)\n",
+    "inner_config = InnerConfig(\n",
+    "    test_train_split=0.8,\n",
+    "    input_dim=2,\n",
+    "    output_dim=1,\n",
+    "    hidden_layer_sizes=[32],\n",
+    "    batch_size=64,\n",
+    "    epochs=5,\n",
+    "    lr=1e-3,\n",
+    "    mu=0.9,\n",
+    "    n_fns=2,\n",
+    "    l2_reg=1e-1,\n",
+    "    seed=42,\n",
+    ")\n",
+    "outer_config = OuterConfig(\n",
+    "    input_dim=1,\n",
+    "    output_dim=1,\n",
+    "    hidden_layer_sizes=[18],\n",
+    "    batch_size=1,\n",
+    "    steps=2,\n",
+    "    print_every=1,\n",
+    "    lr=1e-3,\n",
+    "    mu=0.9,\n",
+    "    seed=24,\n",
+    ")\n",
     "train_dataset = DummyDataset(1000, inner_config.input_dim, 2)\n",
     "test_dataset = DummyDataset(1000, inner_config.input_dim, 2)\n",
-    "train_dataloader = NumpyLoader(train_dataset, batch_size=inner_config.batch_size, shuffle=True)\n",
-    "test_dataloader = NumpyLoader(test_dataset, batch_size=inner_config.batch_size, shuffle=True)\n",
+    "train_dataloader = NumpyLoader(\n",
+    "    train_dataset, batch_size=inner_config.batch_size, shuffle=True\n",
+    ")\n",
+    "test_dataloader = NumpyLoader(\n",
+    "    test_dataset, batch_size=inner_config.batch_size, shuffle=True\n",
+    ")\n",
     "\n",
-    "opt = optax.rmsprop(learning_rate=inner_config.lr, momentum=inner_config.mu, decay=inner_config.l2_reg)\n",
+    "opt = optax.rmsprop(\n",
+    "    learning_rate=inner_config.lr, momentum=inner_config.mu, decay=inner_config.l2_reg\n",
+    ")\n",
     "meta_opt = optax.rmsprop(learning_rate=outer_config.lr, momentum=outer_config.mu)\n",
     "\n",
-    "HNN_acts, HNN_stats = outer_opt(train_dataloader, test_dataloader,compute_loss_hnn ,inner_config, outer_config, opt, meta_opt, save_path=None)"
+    "HNN_acts, HNN_stats = outer_opt(\n",
+    "    train_dataloader,\n",
+    "    test_dataloader,\n",
+    "    compute_loss_hnn,\n",
+    "    inner_config,\n",
+    "    outer_config,\n",
+    "    opt,\n",
+    "    meta_opt,\n",
+    "    save_path=None,\n",
+    ")"
    ]
   },
   {
