added build status badges

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -13,6 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![CI](https://github.com/NonlinearArtificialIntelligenceLab/jaxDiversity/actions/workflows/test.yaml/badge.svg)\n",
+    "![Docs](https://github.com/NonlinearArtificialIntelligenceLab/jaxDiversity/actions/workflows/deploy.yaml/badge.svg)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is an updated implementation for Neural networks embrace diversity paper\n",
     "\n",
     "## Authors\n",
